hphp/hack/test/typecheck/expression_trees/boolean_and.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $n = Code`true && false`;
}
